--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "2.8.5",
-    "json-server": "0.17.0"
+    "json-server": "0.17.0",
+    "netlify-lambda": "^2.0.15",
+    "serverless-http": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "2.0.14"
