--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/node": "^2.5.11",
     "body-parser": "^1.20.0",
     "cors": "2.8.5",
     "json-server": "0.17.0",
